--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cryptostats/sdk": "0.0.29",
     "@chakra-ui/icons": "^1.0.14",
     "@chakra-ui/react": "^1.6.4",
     "@emotion/react": "^11",
@@ -17,7 +18,7 @@
     "@fontsource/source-code-pro": "^4.5.0",
     "@fontsource/spartan": "^4.5.0",
     "@svgr/webpack": "^5.5.0",
-    "@tryghost/content-api": "^1.5.9",
+    "@tryghost/content-api": "^1.5.12",
     "@tryghost/helpers": "^1.1.49",
     "electron": "^14.0.0",
     "framer-motion": "^4",
@@ -26,7 +27,8 @@
     "react-dom": "17.0.2",
     "react-hotkeys-hook": "^3.4.0",
     "react-icons": "^4.2.0",
-    "web3": "^1.5.2"
+    "web3": "^1.5.2",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@types/react": "17.0.13",
